syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.common;

import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/common/types";

message Uint16Range {
  int32 min = 1 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  int32 max = 2 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
}