syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclauth;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclauth/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "common/uint16_range.proto";

// Msg defines the Msg service.
service Msg {
      rpc ProposeAddAccount(MsgProposeAddAccount) returns (MsgProposeAddAccountResponse);
  rpc ApproveAddAccount(MsgApproveAddAccount) returns (MsgApproveAddAccountResponse);
  rpc ProposeRevokeAccount(MsgProposeRevokeAccount) returns (MsgProposeRevokeAccountResponse);
  rpc ApproveRevokeAccount(MsgApproveRevokeAccount) returns (MsgApproveRevokeAccountResponse);
  rpc RejectAddAccount(MsgRejectAddAccount) returns (MsgRejectAddAccountResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgProposeAddAccount {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  google.protobuf.Any pubKey = 3 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey", (gogoproto.moretags) = "validate:\"required\""];
  repeated string roles = 4 [(gogoproto.casttype) = "AccountRole", (gogoproto.moretags) = "validate:\"required\""];
  int32 vendorID = 5 [(gogoproto.moretags) = "validate:\"gte=0,lte=65535\""];
  string info = 6 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 7;
  repeated common.Uint16Range productIDs = 8;
}

message MsgProposeAddAccountResponse {
}

message MsgApproveAddAccount {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgApproveAddAccountResponse {
}

message MsgProposeRevokeAccount {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgProposeRevokeAccountResponse {
}

message MsgApproveRevokeAccount {
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgApproveRevokeAccountResponse {
}

message MsgRejectAddAccount {
  string signer = 1;
  string address = 2;
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgRejectAddAccountResponse {
}

// this line is used by starport scaffolding # proto/tx/message
